unpackaged/main/default/objects/Service__c/Service__c.object-meta.xml
<CustomObject>
    <label>Service</label>
    <nameField>
        <label>Servive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>