unpackaged/main/default/objects/Service__c/fields/MARK_1__c.field-meta.xml
<CustomField>
    <fullName>MARK_1__c</fullName>
    <label>MARK_1</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>