unpackaged/main/default/objects/Service__c/fields/MARK_3__c.field-meta.xml
<CustomField>
    <fullName>MARK_3__c</fullName>
    <label>MARK_3</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>